03-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: brilliant-ns
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deployment
  namespace: brilliant-ns
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mariadb:10.6
        ports:
        - containerPort: 3306
